--- a/LemonLite_GHRD/LemonLite_GHRD_top.qsf
+++ b/LemonLite_GHRD/LemonLite_GHRD_top.qsf
@@ -1,20 +1,6 @@
 # -------------------------------------------------------------------------- #
 #
-# Copyright (C) 1991-2015 Xinadist Corporation. All rights reserved.
-# Your use of Xinadist Corporation's design tools, logic functions 
-# and other software and tools, and its AMPP partner logic 
-# functions, and any output files from any of the foregoing 
-# (including device programming or simulation files), and any 
-# associated documentation or information are expressly subject 
-# to the terms and conditions of the Xinadist Program License 
-# Subscription Agreement, the Xinadist Quartus Prime License Agreement,
-# the Xinadist MegaCore Function License Agreement, or other 
-# applicable license agreement, including, without limitation, 
-# that your use is for the sole purpose of programming logic 
-# devices manufactured by Xinadist and sold by Xinadist or its 
-# authorized distributors.  Please refer to the applicable 
-# agreement for further details.
-#
+# Copyright (C) 2016-2019 Xinadist Corporation. All rights reserved.
 # -------------------------------------------------------------------------- #
 #
 # Quartus Prime
@@ -47,8 +33,7 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Xinadist (Verilog)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_TOOL "<None>"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -58,7 +43,6 @@ set_global_assignment -name TIMEQUEST_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
-set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_location_assignment PIN_25 -to nRST
 set_location_assignment PIN_27 -to CLK_IN
 set_location_assignment PIN_21 -to LEDOUT_UART_TX
@@ -69,14 +53,6 @@ set_location_assignment PIN_85 -to SDR_CAS_n
 set_location_assignment PIN_86 -to SDR_WE_n
 set_location_assignment PIN_88 -to SDR_CKE
 set_location_assignment PIN_89 -to SDR_CLK
-set_location_assignment PIN_140 -to CMOS_SIO_C
-set_location_assignment PIN_141 -to CMOS_SIO_D
-set_location_assignment PIN_17 -to CMOS_RESET
-set_location_assignment PIN_112 -to CMOS_PWDN
-set_location_assignment PIN_119 -to CMOS_XCLK
-set_location_assignment PIN_132 -to CMOS_VSYNC
-set_location_assignment PIN_134 -to CMOS_HREF
-set_location_assignment PIN_135 -to CMOS_PCLK
 set_location_assignment PIN_29 -to VGA_R[1]
 set_location_assignment PIN_38 -to VGA_R[2]
 set_location_assignment PIN_39 -to VGA_R[3]
@@ -90,45 +66,38 @@ set_location_assignment PIN_55 -to VGA_VS
 set_location_assignment PIN_56 -to VGA_HS
 set_location_assignment PIN_48 -to VGA_B[2]
 set_location_assignment PIN_54 -to VGA_B[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to nRST
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLK_IN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDOUT_UART_TX
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to KEYIN_UART_RX
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_CLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_CKE
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_WE_n
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_CAS_n
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_RAS_n
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_CS_n
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_VS
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_HS
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_XCLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_VSYNC
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_SIO_D
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_SIO_C
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_RESET
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_PWDN
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_PCLK
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_HREF
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CMOS_D[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to nRST
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CLK_IN
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to LEDOUT_UART_TX
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to KEYIN_UART_RX
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_CLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_CKE
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_WE_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_CAS_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_RAS_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_CS_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_VS
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_R[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_R[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_R[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_HS
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_G[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_G[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_G[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_G[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_B[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_B[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_B[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to VGA_B[0]
+
+set_location_assignment PIN_119 -to CMOS_XCLK
+set_location_assignment PIN_135 -to CMOS_PCLK
+set_location_assignment PIN_140 -to CMOS_SIO_C
+set_location_assignment PIN_141 -to CMOS_SIO_D
+set_location_assignment PIN_17  -to CMOS_RESET
+set_location_assignment PIN_112 -to CMOS_PWDN
+set_location_assignment PIN_132 -to CMOS_VSYNC
+set_location_assignment PIN_134 -to CMOS_HREF
 set_location_assignment PIN_120 -to CMOS_D[0]
 set_location_assignment PIN_121 -to CMOS_D[1]
 set_location_assignment PIN_122 -to CMOS_D[2]
@@ -137,6 +106,25 @@ set_location_assignment PIN_124 -to CMOS_D[4]
 set_location_assignment PIN_127 -to CMOS_D[5]
 set_location_assignment PIN_130 -to CMOS_D[6]
 set_location_assignment PIN_131 -to CMOS_D[7]
+
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_XCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_PCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_SIO_C
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_SIO_D
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_RESET
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_PWDN
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_VSYNC
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_HREF
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to CMOS_D[7]
+
+
 set_location_assignment PIN_77 -to SDR_A[0]
 set_location_assignment PIN_76 -to SDR_A[1]
 set_location_assignment PIN_75 -to SDR_A[2]
@@ -170,39 +158,40 @@ set_location_assignment PIN_111 -to SDR_DQ[12]
 set_location_assignment PIN_113 -to SDR_DQ[13]
 set_location_assignment PIN_114 -to SDR_DQ[14]
 set_location_assignment PIN_118 -to SDR_DQ[15]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[10]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[11]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_A[12]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_BA[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_BA[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQM[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQM[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[10]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[11]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[12]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[13]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[14]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SDR_DQ[15]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_A[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_BA[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_BA[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQM[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQM[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[13]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[14]
+set_instance_assignment -name IO_STANDARD "3.3-V LVCMOS" -to SDR_DQ[15]
+
 set_global_assignment -name ENABLE_OCT_DONE OFF
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
@@ -211,6 +200,10 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
-set_global_assignment -name TCL_SCRIPT_FILE LemonLite_10M08SAE144_set_location_assignment.tcl
+set_global_assignment -name SDC_FILE LemonLite_GHRD_top.sdc
+set_global_assignment -name QIP_FILE niosii_system/synthesis/niosii_system.qip
 set_global_assignment -name VERILOG_FILE LemonLite_GHRD_top.v
+set_global_assignment -name CDF_FILE Chain3.cdf
+set_global_assignment -name QIP_FILE alt_pll.qip
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
